# hamilton

./: .git-blame-ignore-revs  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Numeric-Hamilton.html  README.md  doc-index.html  flake.nix  hamilton.cabal  hamilton.haddock  hamilton.txt  index-frames.html  index.html  mini_Numeric-Hamilton.html  package.yaml  stack.yaml
app/: Examples.hs
src/: Numeric.Hamilton.html  Paths_hamilton.html
src/Numeric/: Hamilton.hs
