name:                hamilton
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/mstksg/hamilton#readme
license:             BSD3
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
copyright:           (c) Justin Le 2016
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Numeric.Hamilton
  build-depends:       base >= 4.7 && < 5
                     , ad
                     , comonad
                     , free
                     , hmatrix >= 0.18
                     , hmatrix-gsl >= 0.18
                     , typelits-witnesses
                     , vector-sized
  ghc-options:         -Wall
  default-language:    Haskell2010

executable hamilton-examples
  hs-source-dirs:      app
  main-is:             Examples.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , containers
                     , hamilton
                     , hmatrix
                     , vector
                     , vector-sized
                     , vty
  default-language:    Haskell2010

-- test-suite hamilton-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , hamilton
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mstksg/hamilton
