name:                hamilton
version:             0.1.0.0
synopsis:            Physics on generalized coordinate systems using Hamiltonian Mechanics and AD
description:         See README.md (or read online at <https://github.com/mstksg/hamilton#readme>)
homepage:            https://github.com/mstksg/hamilton
license:             BSD3
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
copyright:           (c) Justin Le 2016
category:            Physics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Numeric.Hamilton
  build-depends:       base >= 4.7 && < 5
                     , ad
                     , comonad
                     , free
                     , hmatrix >= 0.18
                     , hmatrix-gsl >= 0.18
                     , typelits-witnesses
                     , vector-sized >= 0.4.1
  ghc-options:         -Wall
  default-language:    Haskell2010

executable hamilton-examples
  hs-source-dirs:      app
  main-is:             Examples.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , ansi-wl-pprint
                     , containers
                     , hamilton
                     , hmatrix
                     , optparse-applicative >= 0.13
                     , vector
                     , vector-sized
                     , vty
  default-language:    Haskell2010

-- test-suite hamilton-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , hamilton
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mstksg/hamilton
