name:                hamilton
version:             0.1.0.1
synopsis:            Physics on generalized coordinate systems using Hamiltonian Mechanics and AD
description:         See README.md (or read online at <https://github.com/mstksg/hamilton#readme>)
homepage:            https://github.com/mstksg/hamilton
license:             BSD3
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
copyright:           (c) Justin Le 2016
category:            Physics
build-type:          Simple
extra-source-files:  README.md, CHANGELOG.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2
                   , GHC == 8.2.1

library
  hs-source-dirs:      src
  exposed-modules:     Numeric.Hamilton
  build-depends:       base >= 4.9 && < 5
                     , ad
                     , comonad
                     , free
                     , hmatrix >= 0.18
                     , hmatrix-gsl >= 0.18
                     , typelits-witnesses
                     , vector-sized >= 0.6
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

executable hamilton-examples
  hs-source-dirs:      app
  main-is:             Examples.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       base >= 4.9
                     , ansi-wl-pprint
                     , containers
                     , hamilton
                     , hmatrix >= 0.18
                     , optparse-applicative >= 0.13
                     , vector
                     , vector-sized >= 0.6
                     , vty
  default-language:    Haskell2010

-- test-suite hamilton-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , hamilton
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mstksg/hamilton
